# k8s-mooc

./: k8s-mooc.code-workspace
log-output/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  package.json
log-output-cpp/: CMakeLists.txt  Makefile
log-output-cpp/src/mlog/: Meqdad.cpp
log-output/manifests/: deployment.yaml  ingress.yaml  service.yaml
log-output/src/: app.js  main.cpp
log-output/src/mlog/include/: Meqdad.hpp
ping-pong-app/: Dockerfile  package.json
ping-pong-app/manifests/: deployment.yaml  service.yaml
ping-pong-app/src/: app.js  index.js
todo-app/: Dockerfile  package.json
todo-app/manifests/: deployment.yaml  ingress.yaml  service.yaml
todo-app/src/: app.js
